# anima-server

./: .gitignore  main.py  pyproject.toml
app/: main.py  runtime.py  world_graph.py
app/api/: router.py
app/api/routes/: agents.py  events.py  session.py  status.py  step.py
app/api/schemas/: actions.py  events.py  posts.py  response.py  social_dynamics.py
app/domain/: action_tools.py  action_types.py
app/prompts/: __init__.py  renderer.py
app/services/: action_executor.py  agent_registry.py  agent_scheduler.py  event_workflow.py  neo4j_event_store.py  perception_service.py  social_dynamics_service.py  social_graph_repository.py
