[project]
name = "anima-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "langchain-core>=0.3.0",
    "langchain-neo4j>=0.5.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "neo4j>=5.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]
